# swarm-lab

./: .gitignore  AGENTS.md  PAPER_SWARM_PLAN.md  README.md  build_env.sh  codex_shared_ippo_plan.md  justfile  mkdocs.yml  pyproject.toml  tmp_quad_swarm_probe.py  tmp_quad_swarm_probe_result.txt
environments/: __init__.py  pyproject.toml
environments/environments/: __init__.py
environments/environments/envs/: README.md  __init__.py  manager_based_ma_env.py  manager_based_ma_env_cfg.py  manager_based_marl_env.py  manager_based_marl_env_cfg.py
environments/environments/tasks/: __init__.py
environments/environments/tasks/cameron_swarm/: README.md  __init__.py  drone_waypoint_marl_env_cfg.py  env.py
environments/environments/tasks/cameron_swarm/config/: skrl_ippo_cfg.yaml  skrl_mappo_cfg.yaml
environments/environments/tasks/cameron_swarm/mdp/: __init__.py  curriculums.py  events.py  observations.py  rewards.py  terminations.py
environments/environments/tasks/formation_swarm/: __init__.py  env.py  env_cfg.py  formation_marl_env.py  formation_marl_env_cfg.py  paper_spec.py
environments/environments/tasks/manager_swarm/: __init__.py  manager_based_ma_env.py  manager_based_ma_env_cfg.py  manager_based_marl_env.py  manager_based_marl_env_cfg.py
environments/environments/tasks/paper_swarm/: __init__.py  paper_swarm_env.py  paper_swarm_env_cfg.py  paper_swarm_recorders.py
environments/environments/tasks/paper_swarm/agents/: runner.py  (+2 more)
environments/environments/tasks/quad_swarm_paper/: __init__.py  env.py  env_cache.py  env_cfg.py  obstacle_room.py  paper_spec.py
(+194 files in other folders)
