[project]
name = "environments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "cam", email = "36940948+camwolff02@users.noreply.github.com" },
]
requires-python = ">=3.12, <3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "environments"
module-root = ""
